--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AsoTools</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
@@ -25,11 +25,21 @@
         <div class="banner__content inputAnswer hidden">
             <p class="banner__content--question question">Pregunta</p>
             <textarea class="banner__content--input answer" type="text"></textarea>
+            <div class="button__emojis emojis">
+                <div><img class="button__emojis--emoji veryBad" src="./imgs/emojiMMG.png"></div>
+                <div><img class="button__emojis--emoji  bad" src="./imgs/emojiMG.png"></div>
+                <div><img class="button__emojis--emoji  regular" src="./imgs/emojiMR.png"></div>
+                <div><img class="button__emojis--emoji  nice" src="./imgs/emojiRG.png"></div>
+            </div>
             <button class="bttNext button button--width">Enviar</button>
         </div>
 
        <div class="thanks banner__content--question hidden"><h2>Gracias por su participación</h2></div>
+       <div class="standby banner__content--question hidden">
+            <h3>Gracias por tu respuesta, espera que se termine la votación...</h3>
+       </div>
         <button class="button hidden return">Volver</button>
+    
 
     </section>
     
