nuevos cambios antes de la prueba

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             <input class="input name" type="text" placeholder="Nombre"
                 name="nameProyect">
         </label>
+        <label class="input__label select label-name hidden">
+            Escoga un grupo
+            <select id="type" class="input name" name="group" required>
+                <option value="">Seleccione un grupo</option>
+                <option value="group0">Grupo 1</option>
+                <option value="group1">Grupo 2</option>
+                <option value="group2">Grupo 3</option>
+                <option value="group3">Grupo 4</option>
+            </select>
+        </label>
         <button class="button button--width">Comenzar</button>
 
     </section>
